# bot-monitor

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  INTEGRATION_VERIFICATION_CHECKLIST.md  LICENSE  MIGRATION.md  QUICKSTART_STREAMLIT.md  QUICK_REFERENCE.txt  QUICK_REFERENCE_INTEGRATED.md  README.md  README_STREAMLIT_IMPLEMENTATION.md  README_web_front_new.md  RUNNING_INTEGRATED_APP.md  _launch_dashboard.sh  launch_dashboard.sh  pyproject.toml  setup.py  start_monitors.sh  stop_monitors.sh  streamlit_dashboard.py  test_file_watching.py  test_web_front_new.py  utils_files.py  web_front.py  web_front_multi.py  web_processors.py  web_processors.py.bak  web_processors_multi.py
.streamlit/: secrets.toml
config/: config_position_matching.json  web_processor.yml
src/: __init__.py  edo_api.py  edo_processor.py  swagger.yaml  utils_files.py  web_api.py  web_front.py  web_front_multi.py  web_front_new.py  web_front_sl.py  web_processors.py  web_processors_multi.py  web_processors_old.py
src/data_analyzer/: position_comparator.py
src/processors/: edo_processor.py  file_watcher.py  web_processor.py
src/test/: test_wp.py
